--- a/danh sach.html
+++ b/danh sach.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<strong>
+    <li>Việt Nam</li>
+</strong>
+<ol>
+    <li>Hà Nội</li>
+    <li>Sài Gòn</li>
+    <li>Huế</li>Kỳ
+    <li>Đà Nẵng</li>
+</ol>
+<strong>
+    <li>Hoa Kỳ </li>
+</strong>
+<ol>
+    <li>New York</li>
+    <li>Los Angeles</li>
+    <li>Chicago</li>
+    <li>Houston</li>
+</ol>
+<strong>
+    <li>Trung Quốc</li>
+</strong>
+<ol>
+<li>Beijing</li>
+<li>Chongqing</li>
+<li>Shanghai</li>
+<li>Tianjin</li>
+<ol>
 </body>
-</html>
+<html>
