nop bai tap bo sung

--- a/ss5/tao_form_don_gian.html
+++ b/ss5/tao_form_don_gian.html
@@ -26,9 +26,57 @@
             <input type="checkbox">Du lịch
         </td>
     </tr>
+    <td>
+        <input type="submit" value="Gửi thông tin">
+        <input type="submit" value="Nhập lại">
+    </td>
 </table>
-<td>
-    <input type="submit" value="Gửi thông tin">
-    <input type="submit" value="Nhập lại">
-</td>
+<table>
+    <style>
+        .text{
+            width:500px;
+            height:100px;
+        }
+    </style>
+    <h1 style="background-color: cornflowerblue">ĐĂNG KÍ HỌC VIÊN</h1>
+    <tr>
+        <td>Họ và tên</td>
+        <td><input type="text"</td>
+    </tr>
+    <tr>
+        <td>Ngày sinh</td>
+        <td><input type="text"></td>
+    </tr>
+    <tr>
+        <td>Giới tính</td>
+        <td><input type="radio" name="gender">Nam</td>
+        <td><input type="radio" name="gender">Nữ</td>
+    </tr>
+    <tr>
+        <td>Địa chỉ</td>
+        <td><input class=text type="text"</td>
+    </tr>
+    <tr>
+        <td>Lớp</td>
+        <td>
+            <select name="Lớp">
+                <option value="1">1</option>
+                <option value="1">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>Email</td>
+        <td><input type="text"</td>
+    </tr>
+    <tr>
+        <td>Điện thoại</td>
+        <td><input type="number"</td>
+    </tr>
+    <td><input type="submit" value="Gửi thông tin"</td>
+    <td><input type="submit" value="Nhập lại"</td>
+</table>
 </html>
